--- a/css/style.css
+++ b/css/style.css
@@ -30,3 +30,32 @@ body {
 .color-palette .item:hover {
     transform: scale(1.1);
 }
+
+.start-btn {
+    width: 110px;
+    background-color: rgb(244, 187, 187);
+    border: none;
+    border-radius: 2px;
+    margin-left: 15px;
+}
+
+.container {
+    margin: 15px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: flex-start;
+    gap: 8px;
+}
+
+.item {
+    display: flex;
+    width: 40px;
+    height: 40px;
+    border: 2px solid #808080;
+    border-radius: 5px;
+    background-color: bisque;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
