--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,14 @@ body {
     font-family: sans-serif;
 }
 
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+
+}
+
+
 .output {
     text-align: center;
     text-transform: uppercase;
